# Kognitive-Automobile-Labor

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  README.md
launch/: kal2.launch
src/kal2_control/: CMakeLists.txt  package.xml
src/kal2_control/launch/: controller.launch  controller_node.launch  main_controller.launch  my_control_node.launch  pid_controller_node.launch
src/kal2_control/launch/params/: controller.yaml  main_controller.yaml  pid_controller.yaml
src/kal2_control/recorded_paths/: path_calculated.yaml
src/kal2_control/scrips/: my_control_node
src/kal2_control/scripts/: controller_node  main_controller_node  pid_controller_node
src/kal2_control/src/kal2_control/: MPCController.py  MPC_node_new.py  controller_node.py  main_controller.py  main_controller_node.py  pid.py  pid_controller_node.py  pp_controler_josua.py  pure_pursuit.py  pure_pursuit_controler.py  stanley_controller.py  state_machine.py  trajectory_planning.py  turning.py
src/kal2_control/test/: test_pid.py
src/kal2_msgs/: CMakeLists.txt  package.xml
src/kal2_msgs/msg/: DetectedSign.msg  MainControllerState.msg
src/kal2_perception/: CMakeLists.txt  package.xml
src/kal2_perception/launch/: city_detector_node.launch  direction_detector_node.launch  lane_detector_node.launch  localization.launch  map_recorder.launch  perception.launch  sign_detector_node.launch
src/kal2_perception/launch/params/: default.yaml  localization.yaml  sign_detection.yaml
src/kal2_perception/models/: craft_keras_ocr.onnx  crnn_kurapan_keras_ocr_pred.onnx  mobilenetv2_sign_detection_final.onnx  segmentation_model_v2.fixed_224_224_3.onnx
src/kal2_perception/notebooks/: lane-detection-experiments.ipynb
src/kal2_perception/scrips/: city_detector_node  direction_detector_node  lane_detector_node  localization_node  map_recorder_node  sign_detector_node
src/kal2_perception/src/kal2_perception/: birds_eye_view.py  camera.py  city_detector_node.py  direction_detector_node.py  feature_extraction.py  lane_detector_node.py  lane_model.py  lane_tracker.py  lane_tracking.py  lane_tracking_v2.py  localization.py  map_recorder.py  node_base.py  ocr.py  preprocessing.py  ransac.py  sign_detector_node.py  util.py  visualization.py
src/kal2_perception/test/: test_lane_tracker.py  test_lane_tracking.py  test_preprocessing.py
src/kal2_srvs/: CMakeLists.txt  package.xml
src/kal2_srvs/srv/: StartDriving.srv
src/kal2_util/: CMakeLists.txt  package.xml
src/kal2_util/src/kal2_util/: node_base.py  (+1 more)
