<?xml version="1.0"?>
<package format="2">
  <name>kal2_msgs</name>
  <version>0.0.0</version>
  <description>The kal2_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="josua@todo.todo">josua</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>catkin</build_depend>

  <export></export>
</package>
